Bug 390224 - Couldn't install Chromium without a manual `sudo apt update` first
Summary: Couldn't install Chromium without a manual `sudo apt update` first
Status: VERIFIED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.12.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-10 16:16 UTC by Nate Graham
Modified: 2018-06-07 21:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2018-02-10 16:16:14 UTC
Discover from git master in KDE Neon.

Tried to install Chromium. It failed, with the following console message:

$ plasma-discover 
[...]
PackageKit error: 10 "Package download failed" "E: http://archive.ubuntu.com/ubuntu xenial-updates/universe amd64 chromium-codecs-ffmpeg-extra amd64 64.0.3282.119-0ubuntu0.16.04.1 is not (yet) available (404  Not Found [IP: 91.189.91.23 80])\nE: http://security.ubuntu.com/ubuntu xenial-security/universe amd64 chromium-browser amd64 64.0.3282.119-0ubuntu0.16.04.1 is not (yet) available (404  Not Found [IP: 91.189.91.23 80])\nE: http://security.ubuntu.com/ubuntu xenial-security/universe amd64 chromium-browser-l10n all 64.0.3282.119-0ubuntu0.16.04.1 is not (yet) available (404  Not Found [IP: 91.189.91.23 80])\nE: http://archive.ubuntu.com/ubuntu xenial-updates/universe amd64 chromium-codecs-ffmpeg-extra amd64 64.0.3282.119-0ubuntu0.16.04.1 is not (yet) available (404  Not Found [IP: 91.189.91.23 80])\n"
qrc:/qml/ProgressView.qml:91: TypeError: Cannot read property 'resource' of undefined
qrc:/qml/ProgressView.qml:51:31: QML ListModel: remove: indices [0 - 1] out of range [0 - 0]


Manually running `sudo apt update` resolved the underlying issue, and then Discover was able to install Chromium. But that shouldn't have been required. Discover should be able to fix this situation on its own.
Comment 1 Aleix Pol 2018-02-12 18:09:30 UTC
You mean that we should refresh and retry every time we find a ErrorPackageDownloadFailed?
Comment 2 Nate Graham 2018-02-12 18:12:14 UTC
That would probably increase the reliability, and cut down on transient errors.
Comment 3 Aleix Pol 2018-06-06 11:59:42 UTC
Git commit 3ff7ecb2a554f39048c18155a01a3c406e8acc98 by Aleix Pol.
Committed on 06/06/2018 at 11:58.
Pushed by apol into branch 'Plasma/5.12'.

PK: Make sure we don't use very outdated package dbs

If it's older than 1h, trigger a refresh.

M  +19   -6    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +0    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.h
M  +1    -1    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp

https://commits.kde.org/discover/3ff7ecb2a554f39048c18155a01a3c406e8acc98
Comment 4 Nate Graham 2018-06-07 21:34:49 UTC
Woohoo, thanks!