PK: Make sure we don't use very outdated package dbs

If it's older than 1h, trigger a refresh.

BUG: 390224